--- a/style/index.css
+++ b/style/index.css
@@ -262,6 +262,110 @@ a {
   transform: scale(1.05);
 }
 
+/* TRENDING MOVIE */
+.swiper {
+  width: 100%;
+  max-width: 1200px;
+  height: auto;
+  margin: 30px auto;
+  padding: 10px 0;
+}
+
+.swiper-wrapper {
+  display: flex;
+  gap: 20px;
+  transition: transform 0.3s ease;
+}
+
+.swiper-slide {
+  width: 200px !important;
+  margin-right: 20px !important;
+  flex: 0 0 auto;
+  width: 200px;
+  height: 370px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #444;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.swiper-slide:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
+}
+
+.swiper-slide p {
+  margin-top: 10px;
+  color: #fff;
+  text-align: center;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  transition: background 0.3s ease;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  color: #000;
+}
+
+/* POPULAR MOVIE */
+#popular-movie {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+}
+
+.movie-card {
+  flex: 1 0 200px;
+  /* flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 200px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #444;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.movie-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+}
+
+.movie-card > img {
+  width: 100%;
+}
+
+.movie-card > p {
+  margin-top: 10px;
+  color: #fff;
+  text-align: center;
+}
+
 /* FOOTER */
 .footer {
   display: flex;
